# claim

./: .gitignore  CHANGES.md  Cargo.toml  DELETE_TEST_COVERAGE.md  HTTP2_FIX.md  IMPLEMENTATION_GUIDE.md  INTERACTIVE_UI_COMPLETE.md  INTERACTIVE_UI_DESIGN.md  INTERACTIVE_UI_IMPLEMENTATION.md  INTERACTIVE_UI_UPDATES.md  INTERACTIVE_UI_UX_IMPROVEMENTS.md  LICENSE  PROJECT_ANALYSIS_REPORT.md  README.md  SECURITY.md  TEST_IMPROVEMENTS.md  build.rs  cleanup_test_entries_auto.sh  run_functional_tests.sh  run_tests.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.roo/: cross-platform-distribution.md  deployment.md
docs/: README.md  performance-optimizations.md
docs/contributing/: markdown-style-guide.md
docs/development/: implementation-guide.md  testing.md
docs/features/: cache-system.md  changelog.md  interactive-ui.md
src/: add.rs  cache.rs  config.rs  delete.rs  error.rs  logging.rs  main.rs  monday.rs  query.rs  selenium.rs  time.rs  ui.rs  utils.rs
src/interactive/: activity_types.rs  app.rs  dialogs.rs  entry_details.rs  events.rs  form.rs  form_ui.rs  messages.rs  mod.rs  summary_chart.rs  ui.rs  utils.rs  week_view.rs
tests/: basic_integration.rs  functional_tests.rs
tests/scripts/: README.md  cleanup_test_entries.sh  test_all_optimizations.sh  test_optimizations.sh
