[package]
name = "claim"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "4.0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3.3.0"

[[test]]
name = "functional_tests"
path = "tests/functional_tests.rs"

[[test]]
name = "integration_tests"
path = "tests/basic_integration.rs"